--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,9 +1,28 @@
-import { Container } from 'theme-ui'
+import {
+  BaseStyles,
+  Badge,
+  Box,
+  Button,
+  Card,
+  Checkbox,
+  Container,
+  Flex,
+  Grid,
+  Heading,
+  Input,
+  Label,
+  Link,
+  NavLink,
+  Radio,
+  Select,
+  Slider,
+  Text,
+  Textarea
+} from 'theme-ui'
 
-<Container>
-
-# Hello!
-
-You’re using the [Hack Club Theme Starter](https://github.com/hackclub/theme-starter).
-
-</Container>
+<Box as="header" sx={{ bg: 'sheet', color: 'text' }}>
+      <Container sx={{ pt: 5, pb: [3, 4], textAlign: 'center' }}>
+        <ColorSwitcher />
+        <Heading as="h1" variant="title" color="red">
+          LinkScape
+        </Heading>
