--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -19,10 +19,70 @@ import {
   Text,
   Textarea
 } from 'theme-ui'
+import Head from 'next/head'
+import Meta from '@hackclub/meta'
+import theme from '@hackclub/theme'
+import ColorSwitcher from '../components/color-switcher'
+import { TypeScale, ColorPalette } from '@theme-ui/style-guide'
 
-<Box as="header" sx={{ bg: 'sheet', color: 'text' }}>
+const DocsPage = () => (
+  <>
+    <Head>
+      <title>Hack Club Theme</title>
+      <Meta
+        name="Theme"
+        description="Hack Club’s theme + React components for Theme UI"
+      />
+    </Head>
+    <Box as="header" sx={{ bg: 'sheet', color: 'text' }}>
       <Container sx={{ pt: 5, pb: [3, 4], textAlign: 'center' }}>
         <ColorSwitcher />
         <Heading as="h1" variant="title" color="red">
-          LinkScape
+          Hack Club Theme
         </Heading>
+        <Text as="p" variant="subtitle" mt={3}>
+          <Link href="https://hackclub.com/">Hack Club’s</Link> theme + React
+          components for <Link href="https://theme-ui.com">Theme UI</Link>.
+        </Text>
+        <Grid
+          gap={4}
+          columns="auto auto auto"
+          sx={{
+            alignItems: 'center',
+            justifyContent: 'center',
+            fontSize: 2,
+            mt: 3,
+            mb: 4,
+            a: { color: 'muted', transition: 'color .125s ease-in-out' }
+          }}
+        >
+          <NavLink href="https://github.com/hackclub/theme">GitHub</NavLink>
+          <NavLink href="https://npmjs.com/package/@hackclub/theme">
+            NPM
+          </NavLink>
+          <NavLink href="https://github.com/hackclub/theme-starter">
+            Starter
+          </NavLink>
+        </Grid>
+      </Container>
+    </Box>
+    <Box as="section" sx={{ bg: 'background', py: 4 }}>
+      <Container>
+        <Heading variant="headline">Containers</Heading>
+      </Container>
+      {Object.keys(theme.layout).map(key => (
+        <Container
+          key={key}
+          variant={key}
+          sx={{
+            my: 3,
+            py: 3,
+            border: '2px dashed',
+            borderColor: 'border',
+            borderRadius: 'default'
+          }}
+        >
+          {key}
+        </Container>
+      ))}
+    </Box>
