--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,4 +22,21 @@ import {
 import Head from 'next/head'
 import Meta from '@hackclub/meta'
 
-# LinkScape
+<Meta
+  as={Head}
+  name="LinkScape"
+  title="LinkScape"
+  description="A non-profit organization which works for the future of open-source software" // page description
+  color="#ec3750" // theme color
+  manifest="/site.webmanifest" // link to site manifest
+/>
+<Box as="header" sx={{ bg: 'sheet', color: 'text' }}>
+  <Container sx={{ pt: 5, pb: [3, 4], textAlign: 'center' }}>
+    <ColorSwitcher />
+    <Heading as="h1" variant="title" color="red">
+      LinkScape
+    </Heading>
+    <Text as="p" variant="subtitle" mt={3}>
+      A non-profit organization which works for the future of open-source software
+    </Text>
+</Box>
