--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -26,9 +26,9 @@ import Meta from '@hackclub/meta'
   as={Head}
   name="LinkScape"
   title="LinkScape"
-  description="A non-profit organization which works for the future of open-source software" // page description
-  color="#ec3750" // theme color
-  manifest="/site.webmanifest" // link to site manifest
+  description="A non-profit organization which works for the future of open-source software"
+  color="#ec3750"
+  manifest="/site.webmanifest"
 />
 <Box as="header" sx={{ bg: 'sheet', color: 'text' }}>
   <Container sx={{ pt: 5, pb: [3, 4], textAlign: 'center' }}>
