--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -39,4 +39,5 @@ import Meta from '@hackclub/meta'
     <Text as="p" variant="subtitle" mt={3}>
       A non-profit organization which works for the future of open-source software
     </Text>
+  </Container>
 </Box>
