--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -21,6 +21,7 @@ import {
 } from 'theme-ui'
 import Head from 'next/head'
 import Meta from '@hackclub/meta'
+import ColorSwitcher from '../components/color-switcher'
 
 <Meta
   as={Head}
