--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -20,6 +20,7 @@ import {
   Textarea
 } from 'theme-ui'
 import Head from 'next/head'
+import theme from '@hackclub/theme'
 import Meta from '@hackclub/meta'
 import ColorSwitcher from '../components/color-switcher'
 
