--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -57,3 +57,6 @@ import ColorSwitcher from '../components/color-switcher'
     </Grid>
   </Container>
 </Box>
+<text>
+  We are partnered with Hack Club
+</text>
