--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -64,4 +64,7 @@ import ColorSwitcher from '../components/color-switcher'
         </Grid>
       </Container>
     </Box>
+    <Container>
+      <Heading variant="headline">Containers</Heading>
+    </Container>
 </>
