--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -29,7 +29,7 @@ import ColorSwitcher from '../components/color-switcher'
   as={Head}
   name="LinkScape"
   title="LinkScape"
-  description="A non-profit organization which works for the future of open-source software"
+  description="test"
   color="#ec3750"
   manifest="/site.webmanifest"
   />
