--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -29,7 +29,7 @@ import ColorSwitcher from '../components/color-switcher'
   as={Head}
   name="LinkScape"
   title="LinkScape"
-  description="test"
+  description="A non-profit organization which works for the future of open-source software"
   color="#ec3750"
   manifest="/site.webmanifest"
   />
@@ -37,10 +37,10 @@ import ColorSwitcher from '../components/color-switcher'
   <Box as="header" sx={{ bg: 'sheet', color: 'text' }}>
     <Container sx={{ pt: 5, pb: [3, 4], textAlign: 'center' }}>
       <ColorSwitcher />
-      <Heading as="h1" variant="title" color="red">
+      <Heading as="h1" variant="title" color="red" class="leading-8">
         LinkScape
       </Heading>
-      <Text as="p" variant="subtitle" mt={3}>
+      <Text as="p" variant="subtitle" mt={3} class="leading-8">
         A non-profit organization which works for the future of open-source software
       </Text>
       <Grid
