--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -24,48 +24,52 @@ import theme from '@hackclub/theme'
 import Meta from '@hackclub/meta'
 import ColorSwitcher from '../components/color-switcher'
 
-<>
-  <Meta
-  as={Head}
-  name="LinkScape"
-  title="LinkScape"
-  description="A non-profit organization which works for the future of open-source software"
-  color="#ec3750"
-  manifest="/site.webmanifest"
-  />
+const DocsPage = () => (
+  <>
+    <Meta
+      as={Head}
+      name="LinkScape"
+      title="LinkScape"
+    description="A non-profit organization which works for the future of open-source software"
+    color="#ec3750"
+    manifest="/site.webmanifest"
+    />
   
-  <Box as="header" sx={{ bg: 'sheet', color: 'text' }}>
-    <Container sx={{ pt: 5, pb: [3, 4], textAlign: 'center' }}>
-      <ColorSwitcher />
-      <Heading as="h1" variant="title" color="red" class="leading-6">
-        LinkScape
-      </Heading>
-      <Text as="p" variant="subtitle" mt={3} class="leading-6">
-        A non-profit organization which works for the future of open-source software
-      </Text>
-      <Grid
-        gap={4}
-        columns="auto auto auto"
-        sx={{
-          alignItems: 'center',
-          justifyContent: 'center',
-          fontSize: 2,
-          mt: 3,
-          mb: 4,
-          a: { color: 'muted', transition: 'color .125s ease-in-out' }
-        }}
-      >
-        <NavLink href="https://github.com/LinkScapeFuundation">GitHub</NavLink>
-        <NavLink href="https://github.com/LinkScapeFuundation/LinkDown">
-          LinkDown
-        </NavLink>
-        <NavLink href="https://hackclub.com">
-          HackClub
-        </NavLink>
-      </Grid>
+    <Box as="header" sx={{ bg: 'sheet', color: 'text' }}>
+      <Container sx={{ pt: 5, pb: [3, 4], textAlign: 'center' }}>
+        <ColorSwitcher />
+        <Heading as="h1" variant="title" color="red" class="leading-6">
+          LinkScape
+        </Heading>
+        <Text as="p" variant="subtitle" mt={3} class="leading-6">
+          A non-profit organization which works for the future of open-source software
+        </Text>
+        <Grid
+          gap={4}
+          columns="auto auto auto"
+          sx={{
+            alignItems: 'center',
+            justifyContent: 'center',
+            fontSize: 2,
+            mt: 3,
+            mb: 4,
+            a: { color: 'muted', transition: 'color .125s ease-in-out' }
+          }}
+        >
+          <NavLink href="https://github.com/LinkScapeFuundation">GitHub</NavLink>
+          <NavLink href="https://github.com/LinkScapeFuundation/LinkDown">
+            LinkDown
+          </NavLink>
+          <NavLink href="https://hackclub.com">
+            HackClub
+          </NavLink>
+        </Grid>
+      </Container>
+    </Box>
+    <Container>
+      <Heading variant="headline">Containers</Heading>
     </Container>
-  </Box>
-  <Container>
-    <Heading variant="headline">Containers</Heading>
-  </Container>
-</>
+  </>
+)
+
+export default DocsPage
